--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
     },
     "homepage": "https://github.com/AndrewMagdyGad/Contact-App#readme",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "bootstrap": "^5.0.1",
+        "connect-flash": "^0.1.1",
         "dotenv": "^10.0.0",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "express-ejs-layouts": "^2.5.0",
+        "express-session": "^1.17.2",
         "mongoose": "^5.12.13",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
         "validator": "^13.6.0"
     },
     "devDependencies": {
