--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "start": "node ./bin/www",
+        "start": "npm install & node ./bin/www",
         "dev": "nodemon app.js"
     },
     "repository": {
