--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "postinstall": "npm run build",
-        "start": "npm install & node ./bin/www",
+        "start": "node ./bin/www",
         "dev": "nodemon app.js"
     },
     "repository": {
@@ -20,14 +19,20 @@
     "homepage": "https://github.com/AndrewMagdyGad/Contact-App#readme",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
         "bootstrap": "^5.0.1",
         "connect-flash": "^0.1.1",
+        "cookie-parser": "^1.4.5",
+        "debug": "^2.6.9",
         "dotenv": "^10.0.0",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "express-ejs-layouts": "^2.5.0",
         "express-session": "^1.17.2",
+        "http-errors": "^1.7.2",
+        "jquery": "^3.6.0",
         "mongoose": "^5.12.13",
+        "morgan": "^1.10.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "validator": "^13.6.0"
