--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "express-session": "^1.17.2",
         "http-errors": "^1.7.2",
         "jquery": "^3.6.0",
+        "method-override": "^3.0.0",
         "mongoose": "^5.12.13",
         "morgan": "^1.10.0",
         "passport": "^0.4.1",
